----------
v3.0.8-git
----------



------
v3.0.7
------

[jan] SECURITY: Fix open redirects.


------
v3.0.6
------

[mjr] Honor selected images when downloading selected images as a zip file
      (Bug #14569).


------
v3.0.5
------

[mjr] Fix creating new galleries (Bug #14372).
[jan] Fix fatal error in upload screen with PHP 7 (Michael Cramer
      <michael@bigmichi1.de>).


------
v3.0.4
------

[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[jan] Improve Oracle compatibility.
[mjr] Fix content-type for screen images to be compatible with some versions
      of IE.


------
v3.0.3
------

[jan] Fix PUTing images.
[jan] Fix DAV URLs when using authusername hooks.
[mjr] Fix fatal error due to failed generation of KeyImage thumbnails in mobile
      view (Bug #14028).


------
v3.0.2
------

[jan] Fix closure compiler errors (Bug #13596).
[jan] Fix type of ansel_shares_users.user_uid column.
[jan] Fix watermark font size preference.
[jan] Make shares table compatible with Oracle.
[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).


------
v3.0.1
------

[mjr] Support nginx style Sendfile headers (Request #12661).
[mjr] Fix cancel button behavior on reporting page (Bug #12667).
[mjr] Prevent protected images from leaking into gallery thumbnails (Bug
      #12668).
[mjr] Fix adding custom watermark (Bug #12634).


------
v3.0.0
------

[mjr] Fixed fatal error when using face widgets.


---------
v3.0.0RC1
---------

[mjr] Fix performing image actions in Lightbox galleries.
[mjr] Fix display of missing widgets.


-----------
v3.0.0beta1
-----------

[mjr] Various fixes for SQLite to work with Ansel.


------
v2.0.2
------

[mjr] Fix auto rotation of images based on orientation exif data (Bug #11441).
[mjr] Honor locked default_download pref (Bug #11325).
[mjr] Fix getting gallery data via the API (maxime@chavagne.net, Bug# 11229).
[mjr] Fix carousel when viewing upload screen in an iFrame (Bug #10889).