@@ -2,6 +2,7 @@
 v3.0.8-git
 ----------
 
+[jan] Officially support PHP 7.
 
 
 ------
